--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 
    <body>
 
-<a href="Https://google.com" target="popup"
-onclick="window.open('https://google.com','name','width=600,height=400')">start</a>
+<script type="text/javascript">
+// Popup window code
+function newPopup(url) {
+	popupWindow = window.open(
+		url,'popUpWindow','height=300,width=400,left=10,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
+}
+</script>
+<p><a href="JavaScript:newpopup('https://google.com');">Open a popup window</a></p>
 
    </body>
 	
