--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ function newPopup(url) {
 		url,'popUpWindow','height=300,width=400,left=10,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
 }
 </script>
-<p><a href="JavaScript:newpopup('https://google.com');">Open a popup window</a></p>
+<p><a href="JavaScript:newPopup('https://google.com');">Open a popup window</a></p>
 
    </body>
 	
