--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
 
    <body>
 
-<script type="text/javascript">
-// Popup window code
-function newPopup(url) {
-	popupWindow = window.open(
-		url,'popUpWindow','height=300,width=400,left=10,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
-}
-</script>
-<p><a href="JavaScript:newPopup('https://google.com');">Open a popup window</a></p>
-
+<script type="text/javascript" src="script.js"></script>
+	   
    </body>
 	
 </html>
