--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Disallow Bootstrap Modal from Closing</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/bootstrap-theme.min.css">
-<script src="https://google.com"></script>
-<script src="js/bootstrap.min.js"></script>
+<title>Disable Closing of Bootstrap Modal on Click of Dark Area</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
-    $(".show-modal").click(function(){
-        $("#myModal").modal({
-            backdrop: 'static',
-            keyboard: false
-        });
-    });
+	$('.launch-modal').click(function(){
+		$('#myModal').modal({
+			backdrop: 'static'
+		});
+	}); 
 });
 </script>
+<style type="text/css">
+    .bs-example{
+    	margin: 20px;
+    }
+</style>
 </head>
 <body>
+<div class="bs-example">
     <!-- Button HTML (to Trigger Modal) -->
-    <input type="button" class="btn btn-lg btn-primary show-modal" value="Show Demo Modal">
+    <input type="button" class="btn btn-lg btn-primary launch-modal" value="Launch Demo Modal">
     
     <!-- Modal HTML -->
     <div id="myModal" class="modal fade">
@@ -33,6 +36,7 @@ $(document).ready(function(){
                 <div class="modal-body">
                     <p>Do you want to save changes you made to document before closing?</p>
                     <p class="text-warning"><small>If you don't save, your changes will be lost.</small></p>
+                    <p class="text-info"><small><strong>Note:</strong> Press Tab key on the keyboard to enter inside the modal window after that press the Esc key. By default keyboard option is true that means modal hide on the press of escape key.</small></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -41,5 +45,6 @@ $(document).ready(function(){
             </div>
         </div>
     </div>
+</div>
 </body>
-</html>
+</html>                      
