--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>Disable Closing of Bootstrap Modal on Click of Dark Area</title>
 <link rel="stylesheet" href="bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="jquery.min.js"></script>
+<script src="bootstrap.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	$('.launch-modal').click(function(){
