--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ $(document).ready(function(){
 	$('.launch-modal').click(function(){
 		$('#myModal').modal({
 			backdrop: 'static'
+			 keyboard: false
 		});
 	}); 
 });
