--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 $(document).ready(function(){
 	$('.launch-modal').click(function(){
 		$('#myModal').modal({
-			backdrop: 'static'
-			 keyboard: false
+			backdrop: "static"
+			data-keyboard="false"
 		});
 	}); 
 });
