--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ $(document).ready(function(){
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
-                <div class="modal-body">
-                  <a href="https://google.com">CA</a>
+<a href="javascript:void(0);" onclick="javascript:window.location.href='https://google.com';">link</a>
+
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
