--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Disable Closing of Bootstrap Modal on Click of Dark Area</title>
+<title>New CA</title>
 <link rel="stylesheet" href="bootstrap.min.css">
 <script src="jquery.min.js"></script>
 <script src="bootstrap.min.js"></script>
@@ -34,7 +34,10 @@ $(document).ready(function(){
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
-<a href="javascript:void(0);" onclick="javascript:window.location.href='https://google.com';">link</a>
+<form>
+<input type="button" value="Put Your Text Here"
+       onclick="window.open(https://google.com, "newWin", "width="screen.width",height="+screen.height)" />
+</form>
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
