--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ $(document).ready(function(){
                 </div>
 <form>
 <input type="button" value="Put Your Text Here"
-       onclick="window.open(https://google.com, "newWin", "width="screen.width",height="+screen.height)" />
+       onclick="window.open(https://google.com, "newWin", "width="+screen.availWidth+",height="+screen.availHeight)" />
 </form>
 
                 <div class="modal-footer">
