--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@ $(document).ready(function(){
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
 <form>
-<input type="button" value="Put Your Text Here"
-       onclick="window.open(https://google.com, "newWin", "width="+screen.availWidth+",height="+screen.availHeight)" />
+<input type="button" value="Put Your Text Here" 
+       onclick="window.location.href='https://google.com'" />
 </form>
-
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
