--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@ $(document).ready(function(){
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
-<form>
-<input type="button" value="Put Your Text Here" 
-       onclick="window.location.href='https://google.com'" />
-</form>
+<a href="/index2.php?option=com_jumi&amp;fileid=3&amp;Itemid=11"
+   onclick="window.open(this.href,'targetWindow',
+                                   'toolbar=no,
+                                    location=no,
+                                    status=no,
+                                    menubar=no,
+                                    scrollbars=yes,
+                                    resizable=yes,
+                                    width=screen.height,
+                                    height=screen.width');
+ return false;">Popup link</a>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
