--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ $(document).ready(function(){
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
-<a href="/index2.php?option=com_jumi&amp;fileid=3&amp;Itemid=11"
+<a href="https://google.com"
    onclick="window.open(this.href,'targetWindow',
                                    'toolbar=no,
                                     location=no,
