--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@ $(document).ready(function(){
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
-<SCRIPT TYPE="text/javascript"> function popup(mylink, windowname) { if (! window.focus)return true; var href;
-if (typeof(mylink) == 'string') href=mylink; else href=mylink.href;
-window.open(https://google.com, windowname, 'width=400,height=200,scrollbars=yes'); return false; } </SCRIPT>
+<a href="https://google.com">New CA</a>
 
 
                 <div class="modal-footer">
