--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@ $(document).ready(function(){
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
-<a href="https://google.com">New CA</a>
+<a href="https://google.com"
+   onclick="javascript:void window.open('https://google.com','CA',
+	   'width=700,height=500,toolbar=0,menubar=0,location=0,status=0,scrollbars=1,resizable=1,left=0,top=0');return false;"
+   >Pop-up Window</a>
 
 
                 <div class="modal-footer">
