--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ $(document).ready(function(){
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
 <a href="https://google.com"
-   onclick="javascript:void window.open('https://google.com','CA',
+   onclick="javascript:void window.open('https://www.summitlearning.org/my/assessment_takes/20565283/q/1','CA',
 	   'width=700,height=500,toolbar=0,menubar=0,location=0,status=0,scrollbars=1,resizable=1,left=0,top=0');return false;"
    >Pop-up Window</a>
 
