--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ $(document).ready(function(){
                 </div>
 
 		    <script>
-var audio = new Audio("http://music.ogg" ) ;
+var audio = new Audio("air.mp3" ) ;
 
 audio.oncanplaythrough = function(){
 audio.play();
