--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@ $(document).ready(function(){
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
 
+function playSound () {
+    document.getElementById('play').play();
+}
+<audio id="play" src="air.mp3"></audio>
 
+<button onclick="playSound()">Play</button>
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
