--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@ $(document).ready(function(){
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
 
-function playSound () {
-    document.getElementById('play').play();
-}
-<audio id="play" src="air.mp3"></audio>
+		    
+		  <audio id="sound1" src="air.mp3" preload="auto"></audio>
+  <button onclick="document.getElementById('sound1').play();">Play
+  it</button>  
 
-<button onclick="playSound()">Play</button>
-
+		    
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
