--- a/index.html
+++ b/index.html
@@ -35,23 +35,7 @@ $(document).ready(function(){
                     <h4 class="modal-title">Confirmation</h4>
                 </div>
 
-		    
-<script>
-
-    $(document).ready(function() {
-        var obj = document.createElement("audio");
-        obj.src="air.mp3";
-        obj.volume=1;
-        obj.autoPlay=false;
-        obj.preLoad=true;       
-
-        $(".playSound").click(function() {
-            obj.play();
-        });
-
-    });
-
-</script>
+		    <iframe width="1000" height="600" src="https://www.google.com" frameborder="0" allowfullscreen></iframe>
 		    
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
